feat: comprehensive pre-production audit — security, reliability, and technical debt
Phase 1 — Critical fixes (C1-C10):
- Fix JWT secret validation (min 32 chars for HMAC-SHA256)
- Add input validation with Bean Validation on all DTOs and request objects
- Implement CSRF protection and secure cookie configuration (SameSite, HttpOnly, Secure)
- Add rate limiting to auth endpoints (10 attempts/min)
- Fix SQL injection vectors in native queries (parameterized queries)
- Sanitize error responses to prevent information leakage
- Add production config validator for required environment variables
- Secure webhook endpoints with HMAC signature validation
- Add API client retry logic with exponential backoff and circuit breaker
- Configure security headers (CSP, HSTS, X-Frame-Options, X-Content-Type-Options)

Phase 2 — High priority fixes (H1-H13):
- Add refresh token rotation for enhanced session security
- Implement proper pagination with configurable max page size
- Add structured logging with correlation IDs (X-Request-Id)
- Enforce store ownership authorization on all store-scoped endpoints
- Add Flyway migration checksums and version gap detection
- Configure connection pool with HikariCP leak detection
- Add graceful shutdown with 30s timeout
- Implement health check endpoint via Spring Boot Actuator
- Add frontend API error boundary with retry capabilities
- Configure backend CORS with environment-specific allowed origins
- Add cost and stock history data validation
- Add store credential encryption at rest
- Implement frontend middleware auth token validation

Phase 3 — Medium technical debt (M1-M14):
- Replace global rate limiter with per-store ConcurrentHashMap<UUID, RateLimiter>
- Standardize DECIMAL precision to (15,2) for all money columns (V82 migration)
- Convert 4 String status fields to type-safe Java enums with V83 migration
- Add CallerRunsPolicy with logging to async thread pools
- Disable show-sql in production (keep in development profile only)
- Repla